--- a/trunk/ch.jester.ui.nl1/plugin.properties
+++ b/trunk/ch.jester.ui.nl1/plugin.properties
@@ -1,3 +1,6 @@
 PlayerView=Players
 TournamentView=Tournaments
-%PlayerEditor=Player Editor
+PlayerEditor=Player Editor
+Activate=Activate
+Deactivate=Deactivate
+NewPlayer=New Player
