--- a/trunk/ch.jester.reportengine.jasper.impl/build.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/build.properties
@@ -1,52 +1,10 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/jasperreports-4.0.2.jar,\
-               lib/commons-beanutils-1.8.0.jar,\
-               lib/commons-collections-2.1.1.jar,\
-               lib/commons-digester-1.7.jar,\
-               lib/commons-logging-1.0.4.jar,\
-               lib/groovy-all-1.7.5.jar,\
-               lib/ant-1.7.1.jar,\
-               lib/antlr-2.7.5.jar,\
-               lib/barbecue-1.5-beta1.jar,\
-               lib/barcode4j-2.0.jar,\
-               lib/batik-anim.jar,\
-               lib/batik-awt-util.jar,\
-               lib/batik-bridge.jar,\
-               lib/batik-css.jar,\
-               lib/batik-dom.jar,\
-               lib/batik-ext.jar,\
-               lib/batik-gvt.jar,\
-               lib/batik-parser.jar,\
-               lib/batik-script.jar,\
-               lib/batik-svg-dom.jar,\
-               lib/batik-svggen.jar,\
-               lib/batik-util.jar,\
-               lib/batik-xml.jar,\
-               lib/bcel-5.2.jar,\
-               lib/bsh-2.0b4.jar,\
-               lib/commons-javaflow-20060411.jar,\
-               lib/iText-2.1.7.jar,\
-               lib/jaxen-1.1.1.jar,\
-               lib/jcommon-1.0.15.jar,\
-               lib/jdt-compiler-3.1.1.jar,\
-               lib/jfreechart-1.0.12.jar,\
-               lib/jxl-2.6.10.jar,\
-               lib/mondrian-3.1.1.12687.jar,\
-               lib/png-encoder-1.5.jar,\
-               lib/rhino-1.7R1.jar,\
-               lib/saaj-api-1.3.jar,\
-               lib/serializer.jar,\
-               lib/spring-beans-2.5.5.jar,\
-               lib/spring-core-2.5.5.jar,\
-               lib/xalan-2.7.1.jar,\
-               lib/xercesImpl-2.7.0.jar,\
-               lib/xml-apis-ext.jar,\
-               lib/xml-apis.jar,\
-               OSGI-INF/component.xml,\
                plugin.xml,\
                reports/,\
-               icons/
+               icons/,\
+               lib/,\
+               OSGI-INF/
 source.. = src/,\
            reports/
