--- a/ch.jester.log4jproperies/src/log4j.properties
+++ b/ch.jester.log4jproperies/src/log4j.properties
@@ -6,7 +6,7 @@ log4j.rootLogger=error, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 # default uses PatternLayout.
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-2p %x - %m [%t - %c{1}]%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} %-5p %x %m [%t - %c{1}]%n
 
 #jester
 log4j.logger.ch.jester=debug
