--- a/trunk/org.eclipselabs.p2.rcpupdate.utils/build.properties
+++ b/trunk/org.eclipselabs.p2.rcpupdate.utils/build.properties
@@ -2,5 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               OSGI-INF/
+               OSGI-INF/,\
+               messages_fr.properties,\
+               messages_de.properties,\
+               messages.properties
 source.. = src/
