--- a/ch.jester.ui.importer.nl1/build.properties
+++ b/ch.jester.ui.importer.nl1/build.properties
@@ -2,4 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin_de.properties
+               src/ch/jester/ui/importer/nl1/plugin_de.properties
