--- a/ch.jester.ui.importer/build.properties
+++ b/ch.jester.ui.importer/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               src/ch/jester/ui/importer/nl1/
