--- a/ch.jester.ui.importer/build.properties
+++ b/ch.jester.ui.importer/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               src/ch/jester/ui/importer/nl1/
+               src/ch/jester/ui/importer/nl1/,\
+               nl1/
