--- a/trunk/ch.jester.ui.importer.nl1/build.properties
+++ b/trunk/ch.jester.ui.importer.nl1/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               src/ch/jester/ui/importer/nl1/plugin_de.properties
+               src/ch/jester/ui/importer/nl1/plugin_de.properties,\
+               nl1/
