--- a/ch.jester.ui/plugin.xml
+++ b/ch.jester.ui/plugin.xml
@@ -536,21 +536,10 @@
             name="General">
       </page>
       <page
-            category="ch.jester.ui.web"
+            category="org.eclipse.ui.net.NetPreferences"
             class="ch.jester.common.ui.pref.IDPreferencePage"
             id="ch.jester.pingservice.pref"
             name="Ping">
-      </page>
-      <page
-            class="ch.jester.common.ui.pref.EmptyPreferencePage"
-            id="ch.jester.ui.web"
-            name="Internet">
-      </page>
-      <page
-            category="ch.jester.ui.web"
-            class="ch.jester.common.ui.pref.IDPreferencePage"
-            id="ch.jester.proxyservice.pref"
-            name="Proxy">
       </page>
    </extension>
 </plugin>
