--- a/trunk/ch.jester.reportengine.jasper.impl/build.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/build.properties
@@ -5,6 +5,8 @@ bin.includes = META-INF/,\
                reports/,\
                icons/,\
                lib/,\
+               nl1/,\
                OSGI-INF/
 source.. = src/,\
-           reports/
+           reports/,\
+           nl1/
