--- a/ch.jester.reportengine.jasper.impl/.classpath
+++ b/ch.jester.reportengine.jasper.impl/.classpath
@@ -47,5 +47,6 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="reports"/>
+	<classpathentry kind="src" path="nl1"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
