--- a/trunk/ch.jester.ui.importer/build.properties
+++ b/trunk/ch.jester.ui.importer/build.properties
@@ -1,8 +1,9 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               src/ch/jester/ui/importer/nl1/,\
+               OSGI-INF/,\
                nl1/
