--- a/trunk/ch.jester.ui.nl1/build.properties
+++ b/trunk/ch.jester.ui.nl1/build.properties
@@ -2,6 +2,4 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.properties,\
-               plugin_de.properties,\
-               plugin_fr.properties
+               OSGI-INF/
