--- a/ch.jester.rcpapplication/build.properties
+++ b/ch.jester.rcpapplication/build.properties
@@ -9,4 +9,5 @@ bin.includes = plugin.xml,\
                jester.ico,\
                jester.icns,\
                icon.xpm,\
-               p2.inf
+               p2.inf,\
+               OSGI-INF/
