--- a/ch.jester.rcpapplication.nl1/build.properties
+++ b/ch.jester.rcpapplication.nl1/build.properties
@@ -2,14 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.properties,\
-               plugin_de.properties,\
-               plugin_fr.properties,\
-               bin/
+               OSGI-INF/
 jars.compile.order = .
-src.includes = plugin_de.properties,\
-               plugin.properties,\
-               plugin_fr.properties,\
-               src/ch/,\
-               META-INF/
-bin.excludes = bin/.svn/
