--- a/trunk/ch.jester.rcpapplication.help.nl1/build.properties
+++ b/trunk/ch.jester.rcpapplication.help.nl1/build.properties
@@ -2,12 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin_fr.properties,\
-               plugin_de.properties,\
-               plugin.properties,\
-               bin/
-src.includes = META-INF/,\
                bin/,\
-               plugin.properties,\
-               plugin_de.properties,\
-               plugin_fr.properties
+               OSGI-INF/
+src.includes = bin/
