--- a/trunk/ch.jester.rcpapplication.help/build.properties
+++ b/trunk/ch.jester.rcpapplication.help/build.properties
@@ -2,5 +2,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                html/,\
-               *.xml
+               *.xml,\
+               OSGI-INF/
 javacDefaultEncoding.. = UTF-8
