--- a/trunk/ch.jester.rcpapplication/build.properties
+++ b/trunk/ch.jester.rcpapplication/build.properties
@@ -10,4 +10,5 @@ bin.includes = plugin.xml,\
                jester.icns,\
                icon.xpm,\
                p2.inf,\
-               OSGI-INF/
+               OSGI-INF/,\
+               bin/
