--- a/trunk/ch.jester.ui.exporter/build.properties
+++ b/trunk/ch.jester.ui.exporter/build.properties
@@ -1,6 +1,8 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               nl1/
