--- a/trunk/ch.jester.ui.nl1/build.properties
+++ b/trunk/ch.jester.ui.nl1/build.properties
@@ -1,5 +1,7 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               OSGI-INF/,\
+               nl1/
