--- a/trunk/ch.jester.ui/build.properties
+++ b/trunk/ch.jester.ui/build.properties
@@ -1,4 +1,5 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
@@ -6,5 +7,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                src/,\
                bin/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               nl1/
 src.includes = icons/
