-Plugin für Schweizer System (Dutch) -null checks auf die SettingsPage und die Settings -div. Anpassungen

--- a/ch.jester.system.swiss.dutch/plugin.xml
+++ b/ch.jester.system.swiss.dutch/plugin.xml
@@ -4,10 +4,9 @@
    <extension
          point="ch.jester.system.api.PairingAlgorithm">
       <PairingAlgorithm
-            class="ch.jester.system.vollrundig.VollrundigPairingAlgorithm"
-            pluginId="ch.jester.system.vollrundig"
-            settingsPage="ch.jester.system.vollrundig.ui.RoundRobinSettingsPage"
-            shortType="Round-Robin"
+            class="ch.jester.system.swiss.dutch.SwissDutchPairingAlgorithm"
+            pluginId="ch.jester.system.swiss.dutch"
+            shortType="Swiss-Dutch"
             typeDescription="%PairingAlgorithm.typeDescription">
       </PairingAlgorithm>
    </extension>
