--- a/trunk/ch.jester.ui.tournament/build.properties
+++ b/trunk/ch.jester.ui.tournament/build.properties
@@ -5,4 +5,4 @@ bin.includes = META-INF/,\
                icons/,\
                bin/,\
                plugin.xml,\
-               plugin.properties
+               OSGI-INF/
