--- a/ch.jester.ui.tournament.nl1/build.properties
+++ b/ch.jester.ui.tournament.nl1/build.properties
@@ -2,10 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.properties,\
-               plugin_de.properties,\
-               plugin_fr.properties
-src.includes = META-INF/,\
-               plugin.properties,\
-               plugin_de.properties,\
-               plugin_fr.properties
+               OSGI-INF/
+src.includes = OSGI-INF/
