--- a/ch.jester.rcpapplication.nl1/build.properties
+++ b/ch.jester.rcpapplication.nl1/build.properties
@@ -2,5 +2,8 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/
+               bundle_de.properties,\
+               bundle_fr.properties
 jars.compile.order = .
+src.includes = bundle_de.properties,\
+               bundle_fr.properties
