--- a/trunk/ch.jester.rcpapplication/build.properties
+++ b/trunk/ch.jester.rcpapplication/build.properties
@@ -10,5 +10,6 @@ bin.includes = plugin.xml,\
                jester.icns,\
                icon.xpm,\
                p2.inf,\
-               OSGI-INF/,\
-               bin/
+               bin/,\
+               bundle.properties
+src.includes = bin/
