--- a/trunk/ch.jester.reportengine.jasper.impl/build.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/build.properties
@@ -6,7 +6,8 @@ bin.includes = META-INF/,\
                icons/,\
                lib/,\
                nl1/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/l10n/
 source.. = src/,\
            reports/,\
            nl1/
