--- a/ch.jester.rcpapplication.help/build.properties
+++ b/ch.jester.rcpapplication.help/build.properties
@@ -3,5 +3,6 @@ bin.includes = plugin.xml,\
                .,\
                html/,\
                *.xml,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/l10n/
 javacDefaultEncoding.. = UTF-8
