--- a/trunk/ch.jester.ui.tournament/build.properties
+++ b/trunk/ch.jester.ui.tournament/build.properties
@@ -1,8 +1,11 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                icons/,\
                bin/,\
                plugin.xml,\
-               OSGI-INF/
+               OSGI-INF/,\
+               OSGI-INF/l10n/,\
+               nl1/
