--- a/trunk/ch.jester.reportengine.jasper.impl/build.properties
+++ b/trunk/ch.jester.reportengine.jasper.impl/build.properties
@@ -2,12 +2,12 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               reports/,\
                icons/,\
                lib/,\
                nl1/,\
-               OSGI-INF/,\
-               OSGI-INF/l10n/
+               reports/,\
+               OSGI-INF/
 source.. = src/,\
            reports/,\
            nl1/
+src.includes = reports/
