--- a/ch.jester.reportengine.jasper.impl.nl1/build.properties
+++ b/ch.jester.reportengine.jasper.impl.nl1/build.properties
@@ -1,7 +1,10 @@
 source.. = src/,\
-           nl1/
+           nl1/,\
+           reports/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               nl1/
+               nl1/,\
+               reports/
+src.includes = reports/
