EstimatedElo und Databinding für restliche Felder

--- a/ch.jester.ui/build.properties
+++ b/ch.jester.ui/build.properties
@@ -7,6 +7,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                src/,\
                bin/,\
+               nl1/,\
                OSGI-INF/,\
-               nl1/
+               OSGI-INF/l10n/
 src.includes = icons/
