--- a/trunk/ch.jester.common.ui/build.properties
+++ b/trunk/ch.jester.common.ui/build.properties
@@ -1,4 +1,6 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               nl1/
