--- a/ch.jester.ui/build.properties
+++ b/ch.jester.ui/build.properties
@@ -8,6 +8,6 @@ bin.includes = META-INF/,\
                src/,\
                bin/,\
                nl1/,\
-               OSGI-INF/,\
-               OSGI-INF/l10n/
+               test.html,\
+               OSGI-INF/
 src.includes = icons/
