--- a/trunk/ch.jester.ui.nl1/build.properties
+++ b/trunk/ch.jester.ui.nl1/build.properties
@@ -4,4 +4,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               nl1/
+               nl1/,\
+               fragment.xml,\
+               nl/
