--- a/trunk/ch.jester.rcpapplication.help.nl1/build.properties
+++ b/trunk/ch.jester.rcpapplication.help.nl1/build.properties
@@ -3,5 +3,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                bin/,\
-               OSGI-INF/
+               OSGI-INF/,\
+               nl/
 src.includes = bin/
