--- a/ch.jester.rcpapplication.help/build.properties
+++ b/ch.jester.rcpapplication.help/build.properties
@@ -1,8 +1,7 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               html/,\
                *.xml,\
-               OSGI-INF/,\
-               OSGI-INF/l10n/
+               resources/,\
+               OSGI-INF/
 javacDefaultEncoding.. = UTF-8
