--- a/ch.jester.ui.tournament/build.properties
+++ b/ch.jester.ui.tournament/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                OSGI-INF/,\
                OSGI-INF/l10n/,\
-               nl1/
+               nl1/,\
+               resources/
