--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -20,7 +20,8 @@ bin.includes = META-INF/,\
                slf4j-log4j12-1.6.1.jar,\
                hibernate-search-3.4.0.Final.jar,\
                hibernate-search-infinispan-3.4.0.Final.jar,\
-               lucene-core-3.1.0.jar
+               lucene-core-3.1.0.jar,\
+               oscache.properties
 jars.compile.order = .
 source.. = src
 output..=bin
