--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -4,7 +4,6 @@ bin.includes = META-INF/,\
                cglib-2.2.jar,\
                commons-collections-3.1.jar,\
                dom4j-1.6.1.jar,\
-               ehcache-1.5.0.jar,\
                hibernate-testing.jar,\
                hibernate-validator-4.1.0.Final.jar,\
                hibernate3.jar,\
@@ -21,7 +20,8 @@ bin.includes = META-INF/,\
                hibernate-search-3.4.0.Final.jar,\
                hibernate-search-infinispan-3.4.0.Final.jar,\
                lucene-core-3.1.0.jar,\
-               oscache.properties
+               oscache.properties,\
+               ehcache-core-2.4.3.jar
 jars.compile.order = .
 source.. = src
 output..=bin
