--- a/ch.jester.ui.importer/build.properties
+++ b/ch.jester.ui.importer/build.properties
@@ -6,4 +6,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                icons/,\
                OSGI-INF/,\
-               nl1/
+               nl1/,\
+               OSGI-INF/l10n/
