Übersetzung Importer Player properties

--- a/ch.jester.importmanagerservice.impl/build.properties
+++ b/ch.jester.importmanagerservice.impl/build.properties
@@ -1,6 +1,8 @@
-source.. = src/
+source.. = src/,\
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               bin/
+               bin/,\
+               nl1/
