- hibernate neuste version - model mit zusätzlichen methoden fürs ui - auslosungen über separaten menupunkt löschbar - turniereinstellungen nur noch änderbar, wenn turnier nicht aktiv - turnier aktiv, wenn mindesten eine runde / paarung da - reportengine startup an den anfang

--- a/ch.jester.hibernate/build.properties
+++ b/ch.jester.hibernate/build.properties
@@ -4,7 +4,6 @@ bin.includes = META-INF/,\
                cglib-2.2.jar,\
                commons-collections-3.1.jar,\
                dom4j-1.6.1.jar,\
-               hibernate-testing.jar,\
                hibernate-validator-4.1.0.Final.jar,\
                hibernate3.jar,\
                infinispan-core-4.2.1.CR1.jar,\
@@ -21,7 +20,11 @@ bin.includes = META-INF/,\
                hibernate-search-infinispan-3.4.0.Final.jar,\
                lucene-core-3.1.0.jar,\
                oscache.properties,\
-               ehcache-core-2.4.3.jar
+               ehcache-core-2.4.3.jar,\
+               ehcache-1.5.0.jar,\
+               hibernate-jpa-2.0-api-1.0.0.Final.jar,\
+               slf4j-jdk14-1.6.1.jar,\
+               validation-api-1.0.0.GA.jar
 jars.compile.order = .
 source.. = src
 output..=bin
