--- a/ch.jester.persistence/build.properties
+++ b/ch.jester.persistence/build.properties
@@ -2,5 +2,5 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               hibernate-jpa-2.0-api-1.0.0.Final.jar,\
-               validation-api-1.0.0.GA.jar
+               validation-api-1.0.0.GA.jar,\
+               hibernate-jpa-2.0-api-1.0.1.Final.jar
