--- a/ch.jester.db.mysql/build.properties
+++ b/ch.jester.db.mysql/build.properties
@@ -1,3 +1,2 @@
 bin.includes = META-INF/,\
-               mysql-connector-java-5.1.15-bin.jar,\
-               plugin.xml
+               mysql-connector-java-5.1.15-bin.jar
