--- a/ch.jester.server/build.properties
+++ b/ch.jester.server/build.properties
@@ -6,7 +6,5 @@ bin.includes = META-INF/,\
                plugin.xml,\
                files/,\
                web/,\
-               WEB-INF/lib/,\
-               WEB-INF/lib/jstl-api-1.2.jar,\
-               WEB-INF/lib/jstl-impl-1.2.jar
-src.includes = files/
+               WEB-INF/,\
+               index.jsp
