--- a/org.eclipselabs.p2.rcpupdate.utils/build.properties
+++ b/org.eclipselabs.p2.rcpupdate.utils/build.properties
@@ -3,7 +3,9 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/,\
-               messages_fr.properties,\
-               messages_de.properties,\
-               messages.properties
-source.. = src/
+               nl1/
+source.. = src/,\
+           nl1/
+src.includes = nl1/messages/messages_fr.properties,\
+               nl1/messages/messages_de.properties,\
+               nl1/messages/messages.properties
