--- a/ch.jester.server/build.properties
+++ b/ch.jester.server/build.properties
@@ -1,10 +1,10 @@
 source.. = src/,\
-           files/
+           nl1/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               files/,\
-               web/,\
                WEB-INF/,\
-               index.jsp
+               index.jsp,\
+               OSGI-INF/,\
+               nl1/
