canFinishEarly auf No gestellt, sonst unschöner Absturz wenn mit der Tastatur gearbeitet wird

--- a/ch.jester.ui.tournament/plugin.xml
+++ b/ch.jester.ui.tournament/plugin.xml
@@ -8,7 +8,7 @@
             name="%NewTournament">
       </category>
       <wizard
-            canFinishEarly="true"
+            canFinishEarly="false"
             category="ch.jester.ui.tournament.tournaments"
             class="ch.jester.ui.tournament.NewTournamentWizard"
             finalPerspective="ch.jester.rcpapplication.tournamentPerspective"
