--- a/ch.jester.server/build.properties
+++ b/ch.jester.server/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                WEB-INF/,\
                index.jsp,\
                OSGI-INF/,\
-               nl1/
+               nl1/,\
+               OSGI-INF/l10n/
