Übersetzungen wurde wegen renaming nicht mehr gefunden

--- a/ch.jester.system.swiss.dutch/build.properties
+++ b/ch.jester.system.swiss.dutch/build.properties
@@ -4,4 +4,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                bin/,\
-               OSGI-INF/l10n/bundle.properties
+               OSGI-INF/
